--- a/机器学习实战/06_decision_tree.ipynb
+++ b/机器学习实战/06_decision_tree.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "基尼不纯度： $G_i = 1-\\sum^{n}_{k=1}p^2_{i,k}$\n",
     "\n",
-    "$ p_{i,k} $表示第i个节点中训练实例之间的$k$类实例的比率，如第二层$value=[0, 49, 5]$，则$p_1=\\frac{0}{54}, p_2=\\frac{49}{54}, p_3=\\frac{5}{54}\\\\ 1-p_1-p_2-p_3 = 0.168$"
+    "$ p_{i,k} $表示第i个节点中训练实例之间的$k$类实例的比率，如第二层$value=[0, 49, 5]$，则$p_1=\\frac{0}{54}, p_2=\\frac{49}{54}, p_3=\\frac{5}{54}\\\\ G_i = 1-p_1-p_2-p_3 = 0.168$"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "为了避免过拟合，需要降低决策树的自由度，也就是正则化。\n",
     "\n",
     "正则化的超参数取决于使用的模型，但是通常，至少可以限制决策树的最大深度。\n",
-    "\n",
+    "```\n",
     "1. max_depth 控制深度\n",
     "\n",
     "2. min_samples_split 分裂前节点必须有的最小样本数\n",
@@ -314,7 +314,7 @@
     "5. max_leaf_modes 最大叶节点数量\n",
     "\n",
     "6. max_features 每个节点评估的最大特征数量\n",
-    "\n",
+    "```\n",
     "增大超参数$min\\_*$或减少$max\\_*$将使得模型正则化"
    ]
   },
@@ -391,12 +391,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e375bbd1",
+   "cell_type": "markdown",
+   "id": "f637dc42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "每个节点不再判断类，而是判断值，最后归类到具体取值并给出标准差"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67515e59",
+   "metadata": {},
+   "source": [
+    "## 回归成本函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46e70a10",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "J(k, t_k)=\\frac{m_{left}}{m}MSE_{left}+\\frac{m_{right}}{m}MSE_{right}\\\\ \\\\ \\\\\n",
+    "其中\\begin{cases} MSE_{node}=\\sum_{i\\in node}(\\hat{y}_{node}-y^{(i)})^2\\\\ \\hat{y}_{node}=\\frac{\\sum_{i\\in node}y^{(i)}}{m_{node}}  \\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7f6a054",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "最好设置 min_samples_leaf（ = 10 ）避免过拟合\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7365958c",
+   "metadata": {},
+   "source": [
+    "# 不稳定性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853e93c1",
+   "metadata": {},
+   "source": [
+    "决策树对于训练集旋转和训练数据中的小变化非常敏感，并且算法是随机的，即便是同一个训练集也可能有不同的模型，除非用random_state进行设置"
+   ]
   }
  ],
  "metadata": {
@@ -428,7 +473,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
