--- a/机器学习实战笔记/10_Keras人工神经网络.ipynb
+++ b/机器学习实战笔记/10_Keras人工神经网络.ipynb
@@ -1935,10 +1935,10 @@
    "execution_count": 76,
    "id": "f3d8ad35-85a6-4ef9-a7cd-4a440f699c1c",
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -3218,9 +3218,56 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "255.675px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
   "toc-autonumbering": true,
   "toc-showcode": false,
-  "toc-showmarkdowntxt": false
+  "toc-showmarkdowntxt": false,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
