--- a/机器学习实战笔记/11_训练深度神经网络.ipynb
+++ b/机器学习实战笔记/11_训练深度神经网络.ipynb
@@ -1982,7 +1982,10 @@
   },
   "toc": {
    "base_numbering": 1,
-   "nav_menu": {},
+   "nav_menu": {
+    "height": "445px",
+    "width": "255px"
+   },
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
@@ -1993,7 +1996,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "255.038px"
+    "width": "279.021px"
    },
    "toc_section_display": true,
    "toc_window_display": true
