--- a/机器学习实战笔记/11_训练深度神经网络.ipynb
+++ b/机器学习实战笔记/11_训练深度神经网络.ipynb
@@ -1936,7 +1936,7 @@
    ],
    "source": [
     "layer = keras.layers.Dense(100, activation=\"selu\", kernel_initializer=\"lecun_normal\",\n",
-    "                           kernel_constraint=keras.constraints.max_norm(1.))\n",
+    "                           kernel_constraint=keras.constraints.max_norm(1.)) # 设置最大范数正则化\n",
     "MaxNormDense = partial(keras.layers.Dense,\n",
     "                       activation=\"selu\", kernel_initializer=\"lecun_normal\",\n",
     "                       kernel_constraint=keras.constraints.max_norm(1.))\n",
@@ -1996,7 +1996,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "279.021px"
+    "width": "279.015px"
    },
    "toc_section_display": true,
    "toc_window_display": true
