更新元胞自动机

--- a/机器学习实战笔记/10_Keras人工神经网络.ipynb
+++ b/机器学习实战笔记/10_Keras人工神经网络.ipynb
@@ -15,7 +15,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "c58f2093-742d-4f25-b75f-adb6baa55569",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -126,7 +128,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "12e67787-8980-4d05-9f07-044d4fa853bb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "x_valid, x_train = x_train_full[:5000] / 255, x_train_full[5000:] / 255\n",
@@ -138,7 +142,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "35495da5-a8c1-4590-8eb7-00532ab7c71c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Snearker', 'Bag', 'Ankle boot']"
@@ -168,7 +174,9 @@
   {
    "cell_type": "markdown",
    "id": "b5b1272b-a58c-468e-8ee8-07d5c7ffc73d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 顺序API构建图像分类器"
    ]
@@ -176,7 +184,9 @@
   {
    "cell_type": "markdown",
    "id": "edf0af99-5a85-456a-a8e1-b09c29f86ba4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## 基本结构"
    ]
@@ -926,7 +936,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "920ca9dd-e364-4693-8421-20d353191827",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1935,6 +1947,7 @@
    "execution_count": 76,
    "id": "f3d8ad35-85a6-4ef9-a7cd-4a440f699c1c",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -3216,7 +3229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
@@ -3267,6 +3280,13 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
