--- a/机器学习实战笔记/12_使用TF自定义模型和训练.ipynb
+++ b/机器学习实战笔记/12_使用TF自定义模型和训练.ipynb
@@ -2010,6 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "83a18e5f",
    "metadata": {},
    "outputs": [
     {
@@ -2582,7 +2583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
@@ -2605,7 +2606,14 @@
    "toc_section_display": true,
    "toc_window_display": true
   },
-  "toc-autonumbering": true
+  "toc-autonumbering": true,
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
