--- a/机器学习实战笔记/11_训练深度神经网络.ipynb
+++ b/机器学习实战笔记/11_训练深度神经网络.ipynb
@@ -820,8 +820,7 @@
     "ExecuteTime": {
      "end_time": "2022-02-20T08:58:22.077947Z",
      "start_time": "2022-02-20T08:57:50.975705Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1316,10 +1315,14 @@
    "id": "e5746bd3",
    "metadata": {},
    "source": [
-    "$常规梯度下降，梯度为\\theta，则更新公式：\\\\ \\theta \\leftarrow \\theta- \\nabla_{\\theta}J(\\theta)$\n",
+    "常规梯度下降，梯度为$\\theta$，则更新公式：$\\\\ \\theta \\leftarrow \\theta- \\nabla_{\\theta}J(\\theta)$\n",
     "\n",
-    "$动量算法，增加动量参数m:\\\\ 1.~m \\leftarrow \\beta m - \\eta \\nabla_\\theta J(\\theta)\\\\\n",
-    "2. ~\\theta \\leftarrow \\theta+m \\\\ 如果梯度保持不变，当\\beta为0.9时，最终梯度变化将比原来的梯度快10倍，\\\\因为权重0.9是前一次动量的参数，权重更大，若新的梯度与原来的梯度方向一致就会加速$\n"
+    "动量算法，增加动量参数 m : \n",
+    "\n",
+    "$1.~m \\leftarrow \\beta m - \\eta \\nabla_\\theta J(\\theta)$ \n",
+    "\n",
+    "$2. ~\\theta \\leftarrow \\theta+m$ 如果梯度保持不变，当$\\beta$为0.9时，最终梯度变化将比原来的梯度快10倍,\n",
+    "因为权重0.9是前一次动量的参数，权重更大，若新的梯度与原来的梯度方向一致就会加速\n"
    ]
   },
   {
@@ -1365,7 +1368,7 @@
    },
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.SGD(learning_rate=0.001, momentum=0.9, nesterov=True) # 设定牛顿参数"
+    "optimizer = keras.optimizers.SGD(learning_rate=0.001, momentum=0.9, nesterov=True) # 设定牛顿参数 "
    ]
   },
   {
@@ -1382,7 +1385,7 @@
    "metadata": {},
    "source": [
     "$\n",
-    "1.~s \\leftarrow s + \\nabla_\\theta J(\\theta) \\otimes \\nabla_\\theta J(\\theta)\\\\\n",
+    "1.~s \\leftarrow s + \\nabla_\\theta J(\\theta) \\otimes \\nabla_\\theta J(\\theta) \\\\\n",
     "2. ~\\theta \\leftarrow \\theta - \\eta\\nabla_{\\theta}J(\\theta)\\oslash\\sqrt{s+\\epsilon}\n",
     "$\n",
     "\n",
@@ -1978,7 +1981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
@@ -2029,6 +2032,13 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
