--- a/机器学习实战笔记/11_训练深度神经网络.ipynb
+++ b/机器学习实战笔记/11_训练深度神经网络.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fd31ad6f-ec30-49b4-9859-21e11f02a2d8",
    "metadata": {
     "ExecuteTime": {
@@ -10,7 +10,19 @@
      "start_time": "2022-02-20T08:52:48.755727Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'keras' from 'tensorflow' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mimport\u001b[39;00m keras\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'keras' from 'tensorflow' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -77,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62879e4c-6669-4676-baad-da731e0130da",
    "metadata": {
     "ExecuteTime": {
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "274f1307",
    "metadata": {
     "ExecuteTime": {
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "901d674c",
    "metadata": {
     "ExecuteTime": {
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4c451fa5",
    "metadata": {
     "ExecuteTime": {
@@ -222,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cbdb6c64",
    "metadata": {
     "ExecuteTime": {
@@ -253,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a192f8e1",
    "metadata": {
     "ExecuteTime": {
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b0735ae2",
    "metadata": {
     "ExecuteTime": {
@@ -386,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bd5c6bfd-9626-4fcb-a5d8-763a6765bd49",
    "metadata": {
     "ExecuteTime": {
@@ -442,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0dea7102-e53d-47ff-b285-2717f984f2b5",
    "metadata": {
     "ExecuteTime": {
@@ -471,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ef36b049-b42d-4e23-ab9b-4f16f9754299",
    "metadata": {
     "ExecuteTime": {
@@ -488,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "456003ae-f92a-4777-bc9e-21055b6b4441",
    "metadata": {
     "ExecuteTime": {
@@ -538,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "629ed944-6c7b-43ec-9e41-2a43e9aceb6f",
    "metadata": {
     "ExecuteTime": {
@@ -568,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "35645772-c5ed-4b92-840b-0e64912c4efa",
    "metadata": {
     "ExecuteTime": {
@@ -585,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8d878a16-8ba4-4995-ad31-61d460b25784",
    "metadata": {
     "ExecuteTime": {
@@ -635,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "de7d81e8-84df-4ead-83a9-6f7eef6633ec",
    "metadata": {
     "ExecuteTime": {
@@ -688,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "31e290c5",
    "metadata": {
     "ExecuteTime": {
@@ -715,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6f530481",
    "metadata": {
     "ExecuteTime": {
@@ -741,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "960d8fa7",
    "metadata": {
     "ExecuteTime": {
@@ -775,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c0d86485",
    "metadata": {
     "ExecuteTime": {
@@ -797,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "657b791a",
    "metadata": {
     "ExecuteTime": {
@@ -814,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f3d56ebe",
    "metadata": {
     "ExecuteTime": {
@@ -864,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5948fd90",
    "metadata": {
     "ExecuteTime": {
@@ -887,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "50ec9bf4",
    "metadata": {
     "ExecuteTime": {
@@ -930,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e28bb33f",
    "metadata": {
     "ExecuteTime": {
@@ -975,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "bc82bccf",
    "metadata": {
     "ExecuteTime": {
@@ -1036,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "882f95de",
    "metadata": {
     "ExecuteTime": {
@@ -1053,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "12e918ce",
    "metadata": {
     "ExecuteTime": {
@@ -1081,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ce47ae93",
    "metadata": {
     "ExecuteTime": {
@@ -1102,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f9441b1d",
    "metadata": {
     "ExecuteTime": {
@@ -1177,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "030e1a3d",
    "metadata": {
     "ExecuteTime": {
@@ -1210,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "5098b598",
    "metadata": {
     "ExecuteTime": {
@@ -1327,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "0c349ea1",
    "metadata": {
     "ExecuteTime": {
@@ -1358,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "26db8294",
    "metadata": {
     "ExecuteTime": {
@@ -1419,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "abc81c14",
    "metadata": {
     "ExecuteTime": {
@@ -1458,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a8780a8e",
    "metadata": {
     "ExecuteTime": {
@@ -1509,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "456d3fbe",
    "metadata": {
     "ExecuteTime": {
@@ -1532,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "25e8f247",
    "metadata": {
     "ExecuteTime": {
@@ -1548,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "551c87be",
    "metadata": {
     "ExecuteTime": {
@@ -1576,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "09c7057b",
    "metadata": {
     "ExecuteTime": {
@@ -1625,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ac28068c",
    "metadata": {
     "ExecuteTime": {
@@ -1643,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "f2f48917",
    "metadata": {
     "ExecuteTime": {
@@ -1664,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "a491b8b0",
    "metadata": {
     "ExecuteTime": {
@@ -1685,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "0190f95e",
    "metadata": {
     "ExecuteTime": {
@@ -1700,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "3afa8fe1",
    "metadata": {
     "ExecuteTime": {
@@ -1771,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "11bdfbc8",
    "metadata": {
     "ExecuteTime": {
@@ -1796,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "4146d7b4",
    "metadata": {
     "ExecuteTime": {
@@ -1879,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "e061256f",
    "metadata": {
     "ExecuteTime": {
@@ -1917,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "e603194a",
    "metadata": {
     "ExecuteTime": {
@@ -1981,7 +1993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
