--- a/机器学习实战笔记/X_01_手搓BP神经网络.ipynb
+++ b/机器学习实战笔记/X_01_手搓BP神经网络.ipynb
@@ -559,7 +559,7 @@
     "        输出 y12 (y11在反向传播用不到)\n",
     "        '''\n",
     "        x = x[:, np.newaxis]\n",
-    "        y11 = self.w1 @ x + self.b1 # 点乘**\n",
+    "        y11 = self.w1 @ x + self.b1 # 叉乘**\n",
     "        y12 = self.activate(y11, activator)\n",
     "        return y12\n",
     "\n",
