--- a/机器学习实战笔记/X_01_手搓BP神经网络.ipynb
+++ b/机器学习实战笔记/X_01_手搓BP神经网络.ipynb
@@ -611,7 +611,7 @@
     "        # 统计损失\n",
     "        self.list_mse = []\n",
     "        \n",
-    "    def train(self, epochs, lr=0.02, activator='sigmoid', loss_type='mse', target_error=0.00):\n",
+    "    def train(self, epochs:int, lr=0.02, activator='sigmoid', loss_type='mse', target_error=0.00):\n",
     "        for _ in range(epochs): \n",
     "            for xs, yt in zip(self.x, self.y): # x_sample, y_true(label)\n",
     "                y12 = self.input_forward_hidden(xs, activator)\n",
