增加强化学习笔记
Former-commit-id: 324ce0854b288c4d2d82971dc3530e247af7b8db

--- a/机器学习实战笔记/17_自动编码器和GAN表征生成学习.ipynb
+++ b/机器学习实战笔记/17_自动编码器和GAN表征生成学习.ipynb
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "怎么理解GAN设定y都是1？ 因为生成器先生成图像，判别器认为是伪，而真实值是1，那么进行反向传播时，先流到判别器，然而判别器不可训练，因此再流到生成器改变其权重，使生成器的权重越来越靠近生成真实图的状态，如果它成功欺骗了判别器，那么误差越来越小，这就是GAN基本思想。\n",
+    "怎么理解GAN设定y都是1（预测真）？ 因为生成器先生成图像，判别器认为是伪，而真实值是1，那么进行反向传播时，先流到判别器，然而判别器不可训练，因此再流到生成器改变其权重，使生成器的权重越来越靠近生成真实图的状态，如果它成功欺骗了判别器，那么误差越来越小，这就是GAN基本思想。\n",
     "\n",
     "判别器越好，生成器的进步空间就越大"
    ]
