--- a/机器学习实战笔记/18_强化学习.ipynb
+++ b/机器学习实战笔记/18_强化学习.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "env = gym.make(\"CartPole-v1\", render_mode=\"rgb_array\")\n",
     "# 渲染模式除非有策略连续指导，否则最好用rgb_array像素张量，再用plt.imshow()作图\n",
-    "obs = env.reset()\n"
+    "obs, info = env.reset()\n"
    ]
   },
   {
@@ -159,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "obs, reward, done, truncated, info = env.step(\n",
-    "    action)  # 新状态，奖励，是否回合结束，是否截断（不懂），其他信息\n"
+    "    action)  # 新状态，奖励，是否回合结束，是否出界，其他信息\n"
    ]
   },
   {
@@ -686,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如何理解PG算法\n",
+    "## ✅如何理解PG算法\n",
     "\n",
     "1. 在每一步中，假设每一步动作都是对的，用神经网络估计出采取该动作的概率，并且计算最终采取的动作和概率之间的损失；进行若干次迭代，每次迭代采取几个回合，统计每一轮的最终得分和梯度（注意，梯度本身就自带若干张量，因此最终得分有两个维度，即每轮和每次迭代，而梯度也有这两个维度，但还多了一个维度包含神经网络的若干梯度张量，`用这句话理解最后训练中的梯度更新`）。\n",
     "\n",
@@ -1379,7 +1379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 如何理解DQN\n",
+    "## ✅如何理解DQN\n",
     "\n",
     "先通过贪婪策略用模型让模型对初始状态随机产生一些动作（因为未经训练）并且获得结果，把这些称为经验并且存起来，经验列表长度2000，因此先运行50个回合，每一回合的步骤是几乎随机的，假如每个回合有30步，那么50回合就有1500步，就有1500个经验被加到列表中，没填满不用担心，因为抽经验是在现有长度内抽的随机数。有了经验以后就随机抽取经验训练模型（`training_step()`），每次抽的都是一个状态、行为等信息的数据组，让DQN预测下一状态（`next_states`）的Q值，用贝尔曼公式得出本轮的目标Q值` = 本轮奖励r + 折扣因子 * 下一轮的预测Q值`，再用DQN预测本轮(`states`)的Q值，通过这两个Q值的误差训练模型。"
    ]
@@ -1664,9 +1664,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DDQN 思路\n",
+    "## ✅DDQN 思路\n",
     "\n",
-    "有两个隐藏层，但在第三层给出两个输出，一个输出V(s)一个输出A(s,a)，最终输出V(s)+A(s,a)，V代表当前状态的价值，A是当前状态s采取动作a获得的优势，假设最佳策略会采取最佳动作，因此要让V=Q(s,a*)，a\\*代表最佳动作，也就相当于A(s,a\\*)等于0，在神经网络中增加对A的约束，让原来的A减去所有A中最大的值"
+    "有两个隐藏层，但在第三层给出两个输出，一个输出`V(s)`一个输出`A(s,a)`，最终输出`V(s)+A(s,a)`，V代表当前状态的价值，A是当前状态s采取动作a获得的优势，假设最佳策略会采取最佳动作，因此要让`V=Q(s,a*)`，a\\*代表最佳动作，也就相当于`A(s,a\\*)`等于0，在神经网络中增加对A的约束，让原来的A减去所有A中最大的值"
    ]
   },
   {
@@ -1890,14 +1890,6 @@
    ],
    "source": [
     "show_DQN_policy(model_ddqn)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TF-Agents"
    ]
   },
   {
